src/App.css
.nav {
  background-color: white;
  color: #000;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
  padding: 0 1rem 3.5rem 0;
}

.logo {
  font-size: 2rem;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  text-transform: capitalize;
}

.alt-color {
  color: #635BE6;
}

.nav ul {
  color: #000;
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  gap: 1rem;
}

.nav a {
  color: inherit;
  text-decoration: none;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0.25rem;
}

.nav li:hover {
  background-color: #777;
}

.greetings {
  color: #606060;
  font-family: 'Poppins', sans-serif;
  font-size: 1.875rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 0.403rem;
}

.intro-1 {
  color: #000;
  font-family: 'Poppins', sans-serif;
  font-size: 2.5rem;
  font-style: normal;
  font-weight: bolder;
  line-height: normal;
}

.header-hr {
  background-color: #635BE6;
}

.intro-2 {
  max-width: 78%;
  line-height: normal;
}

/* FOOTER */

.text-center {
  display: flex;
  justify-content: space-between;
}

.foot {
  display: inline-block;
}

.footerIcon {
  font-size: larger;
  text-align: center;
  text-decoration: none;
}

.footerIcon:hover {
  opacity: 0.7;
}

.footerIconFab {
  color:  #5F5F5F;
}

.footerIconFab:hover {
  color: white;
  background:  #5F5F5F;
}

.footerIconTwi {
  color: #5F5F5F;
}

.footerIconTwi:hover {
  color: #5F5F5F;
  background: white;
}

.footerIconLin {
  color: #5F5F5F;
}

.footerIconLin:hover {
  color: white;
  background: #5F5F5F;
}

.footerIconInsta {
  color: #5F5F5F;
}

.footerIconInsta:hover {
  color: white;
  background: #5F5F5F;
}

.footerIconGit {
  color: #5F5F5F;
}

.footerIconGit:hover {
  color: white;
  background: #5F5F5F;
}

.button-container {
  display: flex;
  justify-content: space-between;
}

.button-link {
  text-decoration: none;
  color: inherit;
}

.button-1 {
  font-size: 1.125rem;
  padding: 0.625rem 2.5rem 0.625rem 2.5rem;
  background-color: #635BE6;
  color: #ffffff;
  border: 2.5px solid #635BE6;
  cursor: pointer;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  text-transform: capitalize;
}

.button-1:hover {
  background-color: #A7A3Eb;
}

.button-2 {
  font-size: 1.125rem;
  padding: 0.625rem 2.5rem 0.625rem 2.5rem;
  background-color: white;
  color: black;
  border: 2.5px solid black;
  cursor: pointer;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  text-transform: capitalize;
}

.button-2:hover {
  background-color: #E0E0E0;
}

.highlight-card {
  margin-top: 10vh;
}

.readmore-button {
	border: none;
	background-color: inherit;
	padding: 0;
	font-size: 16px;
	color: inherit;
	cursor: pointer;
	display: inline-block;
	font-weight: bold;
}

.button-div {
  border: 1px solid black;
  display: inline-block;
}

.mb-4 {
	width: 100%;
}

@media (max-width: 768px) {
	.greetings {
		font-size: 1.375rem;
	}

	.intro-1 {
		font-size: 1.85rem;
	}

	.intro-2 {
		max-width: 100%;
	}

    .container { 
        display: block;
        padding: 0rem;
        margin-left: 0;
        overflow-x: hidden;
    }

    .bulletpoints {
        padding-left: 0;
		list-style-type: disc;
    }

    .mb-4 {
        max-width: 100%;
        margin-left: 0;
        margin-right: 0;
		margin-top: 1rem;
    }
}

